base for any new additions

--- a/views/assets/css/style.css
+++ b/views/assets/css/style.css
@@ -18,10 +18,6 @@ body {
     top: calc(50vh - 100px);
 }
 
-#coordinate {
-    display: none;
-}
-
 .card {
     width: 100%;
     height: 100%;
@@ -100,13 +96,19 @@ body {
 }
 
 .datecont {
-    height: 100%;
+    height: 20%;
     transform: translatez(60px) scale(.9);
     -webkit-transform: translatez(60px) scale(.9);
 }
 
+.weather-icon img {
+    width: 30px;
+    height: auto;
+    float: right;
+}
+
 #date {
-    font-size: 50px;
+    font-size: 30px;
     color: #ECECE7;
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
@@ -115,30 +117,30 @@ body {
 
 #day {
     float: right;
-    font-size: 14px;
-    color: #232227;
+    font-size: 16px;
+    color: #ecece7;
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
 }
 
 #month {
     float: right;
-    font-size: 10px;
-    color: #232227;
+    font-size: 12px;
+    color: #ecece7;
     font-family: 'Montserrat', sans-serif;
     font-weight: 200;
 }
 
-.date i {
-    color: black;
-    position: absolute;
-    bottom: 10px;
-    right: 0;
+.weather-container {
+    height: 80%;
+    transform: translatez(60px) scale(.9);
+    -webkit-transform: translatez(60px) scale(.9);
 }
 
-.date i:hover {
-    color: #232227;
-    transition: .3s ease;
+div p {
+    font-size: 11.8px;
+    color: #ecece7;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .month {
@@ -177,6 +179,43 @@ body {
     font-weight: 400;
 }
 
+#form {
+    display: none;
+    width: 400px;
+    position: relative;
+    perspective: 1000;
+    -webkit-perspective: 1000;
+    left: calc(50% - 200px);
+    top: calc(50vh - 50px);
+    background-color: #232227;
+    color: #ECECE7;
+    border-radius: 6px;
+}
+
+#form p {
+    padding-left: 13px;
+    font-weight: bold;
+}
+
+#name {
+    border: none;
+    outline: none;
+    float: right;
+    margin-right: 13px;
+    padding-bottom: 5.3px;
+}
+
+#add-btn {
+    cursor: pointer;
+    outline: none;
+    float: right;
+}
+#delete-btn {
+    cursor: pointer;
+    outline: none;
+    float: left;
+}
+
 .flipped {
     transform: rotateY(-180deg);
     /*height:400px;
@@ -199,4 +238,12 @@ body {
     box-sizing: border-box;
     transform-style: preserve-3d;
     -webkit-transform-style: preserve-3d;
+}
+
+.backcontainer p {
+    font-size: 36px;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    text-align: center;
 }
