--- a/views/index.html
+++ b/views/index.html
@@ -5,15 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script defer src="assets/js/script.js"></script>
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Team grovyle</title>
 </head>
 
-<body onload="startTime(), getLocation()">
+<body onload="startTime()">
     <div class="container">
         <div class="card">
-            <div class="front">
+            <div class="front" onclick="myFunction()">
                 <div class="contentfront">
                     <div class="month">
                         <table>
@@ -75,21 +74,30 @@
                     </div>
                     <div class="date">
                         <div class="datecont">
+                            <div class="weather-icon"><img src="assets/css/icons/unknown.png"></div>
                             <div id="date"></div>
                             <div id="day"></div>
                             <div id="month"></div>
-                            <div class="weather-container">
-                                <div class="weather-icon"></div>
-                                <div class="temperature-value"></div>
-                                <div class="temperature-description"></div>
-                                <div class="location"></div>
+
+                        </div>
+
+                        <div class="weather-container">
+                            <div class="temperature-value">
+                                <p>- °<span>C</span></p>
+                            </div>
+                            <div class="temperature-description">
+                                <p>-</p>
+                            </div>
+                            <div class="location">
+                                <p>-</p>
                             </div>
                         </div>
+
                     </div>
                 </div>
             </div>
             <div class="back">
-                <div class="contentback">
+                <div class="contentback" onclick="myFunction()">
                     <div class="backcontainer">
                         <p></p>
                     </div>
@@ -97,6 +105,30 @@
             </div>
         </div>
     </div>
+    <!-- "Activity" -->
+    <form id="form">
+        <p>Add an activity!
+            <input type="text" id="name" maxlength="255" />
+            <input type="submit" id="add-btn" value="Submit">
+            <button id="delete-btn">Clear</button>
+        </p>
+        
+    </form>
+
+    <script>
+        function myFunction() {
+            var E = document.getElementById("form");
+            if (E.style.display === "inline-block") {
+                E.style.display = "none";
+            } else {
+                E.style.display = "inline-block";
+            }
+        }
+    </script>
+
 </body>
+<script defer src="assets/js/script.js"></script>
+<script defer src="assets/js/weather.js"></script>
+<script defer src="assets/js/post.js"></script>
 
 </html>
